Feat: 유저정보 라우트 추가
사용자 자신의 프로필을 반환하는 라우트 추가
